--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
 
 
     </div>
+
+
+    <div id="header">
+        <ul>
+            <li id="active" class="meny">Hem</li>
+            <li class="meny">Dagis</li>
+            <li class="meny">Om Mig</li>
+            <li class="meny">Kontakt</li>
+        </ul>
+        <img class="logga" src="Doggy Daycare-6.png" alt="dog">
+
+    </div>
 </body>
 </html>
