--- a/dagis.html
+++ b/dagis.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <div class="Grids-Container">
+        <div id="header-nav">
+        </div>
+        <div id="header-img">
+        </div>
+        <div id="main">
+        </div>
+        <div id="footer">
+        </div>
+
+    </div>
 
 </body>
 
