change id header dan

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="Grids-Container">
 
 
-        <div id="header">
+        <div id="header-nav">
             <ul>
                 <li id="active" class="meny">Hem</li>
                 <li class="meny">Dagis</li>
