--- a/om_mig.html
+++ b/om_mig.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Om_mig</title>
     <link rel="stylesheet" href="css/gemensam.css">
     <link rel="stylesheet" href="css/om_mig.css">
 </head>
