--- a/dagis.html
+++ b/dagis.html
@@ -13,6 +13,14 @@
 <body>
     <div class="Grids-Container">
         <div id="header-nav">
+            <ul>
+                <li id="active" class="meny">Hem</li>
+                <li class="meny">Dagis</li>
+                <li class="meny">Om Mig</li>
+                <li class="meny">Kontakt</li>
+            </ul>
+            <img class="logga" src="Doggy Daycare-6.png" alt="dog">
+
         </div>
         <div id="header-img">
         </div>
