--- a/dagis.html
+++ b/dagis.html
@@ -19,7 +19,7 @@
                 <li class="meny">Om Mig</li>
                 <li class="meny">Kontakt</li>
             </ul>
-            <img class="logga" src="Doggy Daycare-6.png" alt="dog">
+            <img class="logga" src="img/Doggy Daycare-6.png" alt="dog">
 
         </div>
         <div id="header-img">
