--- a/dagis.html
+++ b/dagis.html
@@ -23,6 +23,7 @@
 
         </div>
         <div id="header-img">
+            <img class="meny-pic" src="img/dog-pomeranian.jpg" alt="dog">
         </div>
         <div id="main">
         </div>
