--- a/kontakt.html
+++ b/kontakt.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="css/gemensam.css">
     <link rel="stylesheet" href="css/kontakt.css">
+    <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="Grids-Container">
+        <div id="header-nav">
+            <ul class="nav-text">
+                <li id="active" class="meny">Hem</li>
+                <li class="meny">Dagis</li>
+                <li class="meny">Om Mig</li>
+                <li class="meny">Kontakt</li>
+            </ul>
+            <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
+
+        </div>
+        <div id="header-img">
+            <img class="meny-pic" src="img/dog-pomeranian.jpg" alt="dog">
+        </div>
+        <div id="main">
+        </div>
+        <div id="footer">
+        </div>
+
+    </div>
+
 </body>
+
 </html>
