main-container-html-done

--- a/dagis.html
+++ b/dagis.html
@@ -23,12 +23,24 @@
 
         </div>
         <div id="header-img">
-            <img class="meny-pic" src="img/dog-pomeranian.jpg" alt="dog">
+            <img class="meny-pic" src="img/vit-hund.jpg" alt="dog">
         </div>
         <div id="main">
+            <div id="routines-container"></div>
+            <div id="list-routines-container"></div>>
         </div>
-        <div id="footer">
-        </div>
+        <div id="Rules-container"></div>>
+    </div>
+    <div id="disease-container"></div>
+    <div id="price-list"></div>
+
+
+    </div>
+    <div id="footer">
+        <p>
+            bfjkansc
+        </p>
+    </div>
 
     </div>
 
