--- a/dagis.html
+++ b/dagis.html
@@ -27,12 +27,11 @@
         </div>
         <div id="main">
             <div id="routines-container"></div>
-            <div id="list-routines-container"></div>>
+            <div id="list-routines-container"></div>
+            <div id="Rules-container"></div>
+            <div id="disease-container"></div>
+            <div id="price-list"></div>
         </div>
-        <div id="Rules-container"></div>>
-    </div>
-    <div id="disease-container"></div>
-    <div id="price-list"></div>
 
 
     </div>
