text-box-routines

--- a/dagis.html
+++ b/dagis.html
@@ -26,7 +26,29 @@
             <img class="meny-pic" src="img/vit-hund.jpg" alt="dog">
         </div>
         <div id="main">
-            <div id="routines-container"></div>
+            <div id="routines-container">
+                <div id="textbox-rutines">
+                    <h2>DoggyDayCare Rutiner</h2>
+                    <p>
+                        Det går bra att lämna din hund mellan 05.00-08.45. Då vi går den första promenaden 09.00 behöver
+                        alla hundar som ska rastas vara på plats senast 08.45. Det går även bra att lämna din hund
+                        senare, bara ni meddela mig detta i förväg.<br>
+
+                        <br>Den första promenaden är 09.00 och vi håller oss ute till 11.00. Varje dag varierar vi med
+                        vart vi går och om vi går till någon rasthage.<br>
+                        <br>11.00-12.00 serverar vi lunch åt de hundar som äter på dagis. Efter vovvarna fått sin mat,
+                        blir det mys, vila eller lek. Denna tid håller vi oss inomhus i hemmiljö, där hundarna kan vila
+                        i både soffa och hundbädd.<br>
+                        <br>Hundarna får vila fram till 13.30 sedan är det dags för den andra promenaden. Denna gång
+                        håller vi oss ute 1h. Det går bra att hämta sin hund från 15.00. Då vi har kommit tillbaka från
+                        vår promenad. <br>
+                        <br>Dagiset stänger 18.00. Det går även bra att lämna hundarna för senare kvällar och helger för
+                        en extra avgift.
+
+                    </p>
+                </div>
+            </div>
+
             <div id="list-routines-container"></div>
             <div id="Rules-container"></div>
             <div id="disease-container"></div>
