routines-container grids

--- a/dagis.html
+++ b/dagis.html
@@ -46,6 +46,8 @@
                         en extra avgift.
 
                     </p>
+                    <img id="pomeranian-img" src="img/dog-pomeranian.jpg" alt="dog">
+                    <img id="pugs-img" src="img/pugs-4.jpg" alt="dogs">
                 </div>
             </div>
 
