--- a/dagis.html
+++ b/dagis.html
@@ -27,7 +27,7 @@
         </div>
         <div id="main">
             <div id="routines-container">
-                <div id="textbox-rutines">
+                <div id="textbox-routines">
                     <h2>DoggyDayCare Rutiner</h2>
                     <p>
                         Det går bra att lämna din hund mellan 05.00-08.45. Då vi går den första promenaden 09.00 behöver
@@ -44,11 +44,11 @@
                         vår promenad. <br>
                         <br>Dagiset stänger 18.00. Det går även bra att lämna hundarna för senare kvällar och helger för
                         en extra avgift.
-
                     </p>
-                    <img id="pomeranian-img" src="img/dog-pomeranian.jpg" alt="dog">
-                    <img id="pugs-img" src="img/pugs-4.jpg" alt="dogs">
                 </div>
+                <img id="pomeranian-img" src="img/dog-pomeranian.jpg" alt="dog">
+                <img id="pugs-img" src="img/pugs-4.jpg" alt="dogs">
+
             </div>
 
             <div id="list-routines-container"></div>
