--- a/dagis.html
+++ b/dagis.html
@@ -51,7 +51,34 @@
 
             </div>
 
-            <div id="list-routines-container"></div>
+            <div id="list-routines-container">
+                <div id="container-list">
+
+                    <h2>Dagsschema för DoggyDayCare</h2>
+                    <ul id="open">
+                        <li>05.00 - Dagis öppnar</li>
+                    </ul>
+                    <ul id="Walk1">
+                        <li>09.00-11.00 - Första promis </li>
+                    </ul>
+                    <ul id="food">
+                        <li>11.00-12.00 - Lunch (För de hundar som äter på dagis)</li>
+                    </ul>
+                    <ul id="rest">
+                        <li>12.00-13.30 Mys och lek</li>
+                    </ul>
+                    <ul id="walk2">
+                        <li>13.30-14.30 Sista promis</li>
+                    </ul>
+                    <ul id="home">
+                        <li>15.00 Hundarna kan börja hämtas</li>
+                    </ul>
+                    <ul id="close">
+                        <li>18.00 Dagis stänger</li>
+                    </ul>
+                </div>
+                <img id="bulldog-pic" src="img/bulldog.jpg" alt="dog">
+            </div>
             <div id="Rules-container"></div>
             <div id="disease-container"></div>
             <div id="price-list"></div>
