--- a/dagis.html
+++ b/dagis.html
@@ -79,7 +79,33 @@
                 </div>
                 <img id="bulldog-pic" src="img/bulldog.jpg" alt="dog">
             </div>
-            <div id="Rules-container"></div>
+            <div id="Rules-container">
+                <div id="Rules-textbox">
+                    <h2>Regler</h2>
+                    <h3>Vaccination och Försäkring</h3>
+                    <p>
+                        För att få skriva in sig på hunddagiset behöver alla hundar vara vaccinerade och försäkrade.
+                        Revaccination för kennelhosta ska ske 1 gång om året, intyg på detta måste visas. Detta är ett
+                        krav för allas trygghet.
+                    </p>
+                    <h3>Semester</h3>
+                    <p>Dagiset har semester stängt utefter hundägarnas behov. Alla får lämna in semesterschema och
+                        utefter allas scheman bestämmer jag när dagiset kommer ha semester stängt. Därför kan stängning
+                        vid semestern variera från år till år. Självklart tar vi inte ut någon avgift under tiden dagis
+                        är stängt.</p>
+
+                    <h3>Uppsägning</h3>
+                    <p>Har du fått ett jobb hunden kan följa med till jobbet? Eller kanske flyttat? Oavsett anledning är
+                        det 1mån uppsägningstid som gäller. Perioden börjar gälla från att uppsägningskontrakt skrivs
+                        under.</p>
+
+                    <h3>Röda dagar</h3>
+                    <p>
+                        Dagis har inte alltid stängt på röda dagar. Hör av er till mig angående den röda dagen för vad
+                        som gäller.
+                    </p>
+                </div>
+            </div>
             <div id="disease-container"></div>
             <div id="price-list"></div>
         </div>
