--- a/dagis.html
+++ b/dagis.html
@@ -105,7 +105,7 @@
                         som gäller.
                     </p>
                 </div>
-                <img src="/img/syringe.jpg" alt="syringe">
+                <img id="syringe" src="img/syringe.jpg" alt="syringe">
             </div>
             <div id="disease-container"></div>
             <div id="price-list"></div>
