--- a/dagis.html
+++ b/dagis.html
@@ -14,10 +14,10 @@
     <div class="Grids-Container">
         <div id="header-nav">
             <ul class="nav-text">
-                <li id="active" class="meny">Hem</li>
-                <li class="meny">Dagis</li>
-                <li class="meny">Om Mig</li>
-                <li class="meny">Kontakt</li>
+                <li class="meny"><a href="index.html">Hem</a></li>
+                <li class="meny"><a id="active" href="dagis.html">Dagis</a></li>
+                <li class="meny"><a href="om_mig.html">Om Mig</a></li>
+                <li class="meny"><a href="kontakt.html">Kontakt</a></li>
             </ul>
             <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
 
