done with continer

--- a/dagis.html
+++ b/dagis.html
@@ -107,16 +107,21 @@
                 </div>
                 <img id="syringe" src="img/syringe.jpg" alt="syringe">
             </div>
-            <div id="disease-container"></div>
-            <div id="disease-textbox">
-                <h2>Vid Sjukdom</h2>
-                <p>För att minska risken för smittspridning behöver ni kontakta mig vid sjukt symptom som t.ex. hosta,
-                    kräkningar, diarré eller likande. Sedan får vi tillsammans avgöra om din hund behöver stanna hemma
-                    eller om det är okej att komma till dagis som vanligt. Det kan vara svårt att själv avgöra detta,
-                    vid dessa tillfällen är det viktigt att rådfråga en veterinär. </p>
+            <div id="disease-container">
+                <div id="disease-textbox">
+                    <h2>Vid Sjukdom</h2>
+                    <p>För att minska risken för smittspridning behöver ni kontakta mig vid sjukt symptom som t.ex.
+                        hosta,
+                        kräkningar, diarré eller likande. Sedan får vi tillsammans avgöra om din hund behöver stanna
+                        hemma
+                        eller om det är okej att komma till dagis som vanligt. Det kan vara svårt att själv avgöra
+                        detta,
+                        vid dessa tillfällen är det viktigt att rådfråga en veterinär. </p>
+                </div>
+                <img id="sick-dog" src="img/corgi.jpg" alt="dog">
             </div>
 
-            <img src="img/corgi.jpg" alt="dog">
+
             <div id="price-list"></div>
         </div>
 
