html for pricelist

--- a/dagis.html
+++ b/dagis.html
@@ -122,7 +122,17 @@
             </div>
 
 
-            <div id="price-list"></div>
+            <div id="price-list">
+                <div id="price-list-box">
+                    <h2>Prislista</h2>
+                    <ul>
+                        <li>5 dagar i veckan 4500kr/månaden (mån-fre)</li>
+                        <li>Helgpassning 300kr/dag (övernattning ingår)
+                        <li>
+                        <li>Övertid vardagar 100kr/h</li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
 
