--- a/dagis.html
+++ b/dagis.html
@@ -132,7 +132,10 @@
                         <li>Övertid vardagar 100kr/h</li>
                     </ul>
                 </div>
+
+                <img src="img/corgi.jpg" alt="dog">
             </div>
+
         </div>
 
 
