dollar sign list

--- a/dagis.html
+++ b/dagis.html
@@ -125,15 +125,15 @@
             <div id="price-list">
                 <div id="price-list-box">
                     <h2>Prislista</h2>
-                    <ul>
+                    <ul id="dollar">
                         <li>5 dagar i veckan 4500kr/månaden (mån-fre)</li>
                         <li>Helgpassning 300kr/dag (övernattning ingår)
-                        <li>
+                        </li>
                         <li>Övertid vardagar 100kr/h</li>
                     </ul>
                 </div>
 
-                <img src="img/corgi.jpg" alt="dog">
+                <img id="price-pic" src="img/corgi.jpg" alt="dog">
             </div>
 
         </div>
