--- a/dagis.html
+++ b/dagis.html
@@ -47,7 +47,6 @@
                     </p>
                 </div>
                 <img id="pomeranian-img" src="img/dog-pomeranian.jpg" alt="dog">
-                <img id="pugs-img" src="img/pugs-4.jpg" alt="dogs">
 
             </div>
 
@@ -123,6 +122,8 @@
 
 
             <div id="price-list">
+
+                <img id="pugs" src="img/pugs-4.jpg" alt="dog">
                 <div id="price-list-box">
                     <h2>Prislista</h2>
                     <ul id="dollar">
@@ -134,6 +135,7 @@
                 </div>
 
                 <img id="price-pic" src="img/corgi.jpg" alt="dog">
+
             </div>
 
         </div>
