--- a/dagis.html
+++ b/dagis.html
@@ -46,7 +46,7 @@
                         en extra avgift.
                     </p>
                 </div>
-                <img id="pomeranian-img" src="img/dog-pomeranian.jpg" alt="dog">
+                <img id="pomeranian-img" src="img/pomeranian-run.jpg" alt="dog">
 
             </div>
 
@@ -123,7 +123,7 @@
 
             <div id="price-list">
 
-                <img id="pugs" src="img/pugs-4.jpg" alt="dog">
+                <img id="pugs" src="img/dog-pomeranian.jpg" alt="dog">
                 <div id="price-list-box">
                     <h2>Prislista</h2>
                     <ul id="dollar">
