--- a/dagis.html
+++ b/dagis.html
@@ -117,7 +117,7 @@
                         detta,
                         vid dessa tillfällen är det viktigt att rådfråga en veterinär. </p>
                 </div>
-                <img id="sick-dog" src="img/corgi.jpg" alt="dog">
+                <img id="sick-dog" src="img/Riley.jpg" alt="dog">
             </div>
 
 
