burger symbol done

--- a/dagis.html
+++ b/dagis.html
@@ -20,6 +20,12 @@
                 <li class="meny"><a href="kontakt.html">Kontakt</a></li>
             </ul>
             <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
+            <div id="burger">
+                <div id="line-1"></div>
+                <div id="line-2"></div>
+                <div id="line-3"></div>
+
+            </div>
 
         </div>
         <div id="header-img">
