--- a/dagis.html
+++ b/dagis.html
@@ -28,6 +28,7 @@
             </div>
 
         </div>
+        <script src="css/burger.js"></script>
         <div id="header-img">
             <img class="meny-pic" src="img/vit-hund.jpg" alt="dog">
         </div>
