--- a/dagis.html
+++ b/dagis.html
@@ -130,7 +130,7 @@
 
             <div id="price-list">
 
-                <img id="pugs" src="img/dog-pomeranian.jpg" alt="dog">
+                <img id="pugs" src="img/pugs-4.jpg" alt="dog">
                 <div id="price-list-box">
                     <h2>Prislista</h2>
                     <ul id="dollar">
