--- a/dagis.html
+++ b/dagis.html
@@ -53,7 +53,7 @@
                         en extra avgift.
                     </p>
                 </div>
-                <img id="pomeranian-img" src="img/pomeranian-run.jpg" alt="dog">
+                <img id="pomeranian-img" src="img/pomeranian-run-sudd.jpg" alt="dog">
 
             </div>
 
