--- a/om_mig.html
+++ b/om_mig.html
@@ -21,9 +21,9 @@
             </ul>
             <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
 
-             
+        </div>
         
-            <div id="band">
+            <div id="main">
                 <div class="item-1">
                  <a href="#" class="card">
                     <img class="thumb-1" src="img/avatar.png" alt="avatar" width="200" height="150">
