changed pricelist-box and img

--- a/dagis.html
+++ b/dagis.html
@@ -124,7 +124,7 @@
                         detta,
                         vid dessa tillfällen är det viktigt att rådfråga en veterinär. </p>
                 </div>
-                <img id="sick-dog" src="img/Riley.jpg" alt="dog">
+                <img id="sick-dog" src="img/Riley-sudd.jpg" alt="dog">
             </div>
 
 
@@ -132,7 +132,7 @@
 
                 <img id="pugs" src="img/pugs-4.jpg" alt="dog">
                 <div id="price-list-box">
-                    <h2>Prislista</h2>
+                    <h2 id="rubrik-price">Prislista</h2>
                     <ul id="dollar">
                         <li>5 dagar i veckan 4500kr/månaden (mån-fre)</li>
                         <li>Helgpassning 300kr/dag (övernattning ingår)
