--- a/dagis.html
+++ b/dagis.html
@@ -150,8 +150,15 @@
 
 
         <div id="footer">
+            <img id="footer-img" src="img/Doggy Daycare-5-100px.png" alt="logga">
             <p>
-                bfjkansc
+                08-508 290 00
+            </p>
+            <p>
+                Nortullsgatan 21 Odenplan Stockholm
+            </p>
+            <p>
+                doggydaycare@live.com
             </p>
         </div>
 
