footer text color

--- a/dagis.html
+++ b/dagis.html
@@ -151,13 +151,13 @@
 
         <div id="footer">
             <img id="footer-img" src="img/Doggy Daycare-5-100px.png" alt="logga">
-            <p>
+            <p class="footer-text">
                 08-508 290 00
             </p>
-            <p>
+            <p class="footer-text">
                 Nortullsgatan 21 Odenplan Stockholm
             </p>
-            <p>
+            <p class="footer-text">
                 doggydaycare@live.com
             </p>
         </div>
