fixed footer mobile

--- a/dagis.html
+++ b/dagis.html
@@ -60,7 +60,7 @@
             <div id="list-routines-container">
                 <div id="container-list">
 
-                    <h2>Dagsschema för DoggyDayCare</h2>
+                    <h2>Dagsschema</h2>
                     <ul id="open">
                         <li>05.00 - Dagis öppnar</li>
                     </ul>
@@ -149,7 +149,7 @@
 
 
 
-        <div id="footer">
+        <footer id="footer">
             <img id="footer-img" src="img/Doggy Daycare-5-100px.png" alt="logga">
             <p class="footer-text">
                 08-508 290 00
@@ -160,7 +160,7 @@
             <p class="footer-text">
                 doggydaycare@live.com
             </p>
-        </div>
+        </footer>
 
     </div>
 
