ändra html taggar

--- a/dagis.html
+++ b/dagis.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="Grids-Container">
-        <div id="header-nav">
+        <header id="header-nav">
             <ul class="nav-text">
                 <li class="meny"><a href="index.html">Hem</a></li>
                 <li class="meny"><a id="active" href="dagis.html">Dagis</a></li>
@@ -27,12 +27,12 @@
 
             </div>
 
-        </div>
+        </header>
         <script src="css/burger.js"></script>
         <div id="header-img">
             <img class="meny-pic" src="img/vit-hund.jpg" alt="dog">
         </div>
-        <div id="main">
+        <main id="main">
             <div id="routines-container">
                 <div id="textbox-routines">
                     <h2>DoggyDayCare Rutiner</h2>
@@ -145,7 +145,7 @@
 
             </div>
 
-        </div>
+        </main>
 
 
 
