--- a/dagis.html
+++ b/dagis.html
@@ -30,7 +30,7 @@
         </header>
         <script src="css/burger.js"></script>
         <div id="header-img">
-            <img class="meny-pic" src="img/vit-hund.jpg" alt="dog">
+            <img class="meny-pic" src="img/vit-hund-nav.jpg" alt="dog">
         </div>
         <main id="main">
             <div id="routines-container">
