--- a/om_mig.html
+++ b/om_mig.html
@@ -17,8 +17,8 @@
             <header id="header-nav">
                 <ul class="nav-text">
                     <li class="meny"><a href="index.html">Hem</a></li>
-                    <li class="meny"><a id="active" href="dagis.html">Dagis</a></li>
-                    <li class="meny"><a href="om_mig.html">Om Mig</a></li>
+                    <li class="meny"><a href="dagis.html">Dagis</a></li>
+                    <li class="meny"><a id="active" href="om_mig.html">Om Mig</a></li>
                     <li class="meny"><a href="kontakt.html">Kontakt</a></li>
                 </ul>
                 <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
