--- a/dagis.html
+++ b/dagis.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/gemensam.css">
     <link rel="stylesheet" href="css/dagis.css">
-    <title>Document</title>
+    <title>Dagis</title>
 </head>
 
 <body>
