first step responsiv

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                
                     <img class="chill-dog" src="img/chill dog.jpg" alt="dog chill">
 
-                    <div id="div">
+                    <div id="textbox-bottom">
                     
                     <div class="textbox-img1">
                      <h3>Haga Parken</h3>
