--- a/om_mig.html
+++ b/om_mig.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Om Mig</title>
     <link rel="stylesheet" href="css/gemensam.css">
     <link rel="stylesheet" href="css/om_mig.css">
+    <title>Om Mig</title>
 </head>
 
 <body>
     <div class="Grids-Container">
-
-
-            <div id="header-nav">
+            <header id="header-nav">
                 <ul class="nav-text">
                     <li class="meny"><a href="index.html">Hem</a></li>
                     <li class="meny"><a href="dagis.html">Dagis</a></li>
@@ -22,7 +20,7 @@
                     <li class="meny"><a href="kontakt.html">Kontakt</a></li>
                 </ul>
                 <img class="logga" src="img/Doggy Daycare-7.png" alt="logo">
-            </div>
+            </header>
 
     
 
