done with responsive

--- a/dagis.html
+++ b/dagis.html
@@ -28,14 +28,16 @@
             </div>
 
         </header>
+        <!--link to javascript-->
         <script src="css/burger.js"></script>
+
         <div id="header-img">
             <img class="meny-pic" src="img/vit-hund-nav.jpg" alt="dog">
         </div>
         <main id="main">
             <div id="routines-container">
                 <div id="textbox-routines">
-                    <h2>DoggyDayCare Rutiner</h2>
+                    <h2>Rutiner</h2>
                     <p>
                         Det går bra att lämna din hund mellan 05.00-08.45. Då vi går den första promenaden 09.00 behöver
                         alla hundar som ska rastas vara på plats senast 08.45. Det går även bra att lämna din hund
