--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                     <img class="icon" src="img/iconbar6.png" alt="emoji">
                     <img class="icon" src="img/iconbar7.png" alt="emoji">
                     <img class="icon" src="img/iconbar8.png" alt="emoji">
-                    <img src="img/iconbar9.png" alt="emoji">
-                    <img src="img/iconbar10.png" alt="emoji">
-                    <img src="img/iconbar11.png" alt="emoji">
-                    <img src="img/iconbar12.png" alt="emoji">
-                    <img src="img/iconbar13.png" alt="emoji">
+                    <img class="icon1" src="img/iconbar9.png" alt="emoji">
+                    <img class="icon1" src="img/iconbar10.png" alt="emoji">
+                    <img class="icon1" src="img/iconbar11.png" alt="emoji">
+                    <img class="icon1" src="img/iconbar12.png" alt="emoji">
+                    <img class="icon1" src="img/iconbar13.png" alt="emoji">
 
 
 
