--- a/dagis.html
+++ b/dagis.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
                 <li class="meny"><a href="om_mig.html">Om Mig</a></li>
                 <li class="meny"><a href="kontakt.html">Kontakt</a></li>
             </ul>
-            <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
+            <img class="logga" src="img/Doggy Daycare-7.png" alt="hund">
             <div id="burger">
                 <div id="line-1"></div>
                 <div id="line-2"></div>
