changed html and some box sizes

--- a/dagis.html
+++ b/dagis.html
@@ -14,29 +14,34 @@
     <div class="Grids-Container">
         <header id="header-nav">
             <ul class="nav-text">
+
                 <li class="meny"><a href="index.html">Hem</a></li>
                 <li class="meny"><a id="active" href="dagis.html">Dagis</a></li>
                 <li class="meny"><a href="om_mig.html">Om Mig</a></li>
                 <li class="meny"><a href="kontakt.html">Kontakt</a></li>
             </ul>
-            <img class="logga" src="img/Doggy Daycare-7.png" alt="hund">
+
+            <img class="logga" src="img/Doggy Daycare-7.png" alt="logga">
+
             <div id="burger">
+
                 <div id="line-1"></div>
                 <div id="line-2"></div>
                 <div id="line-3"></div>
 
             </div>
-
         </header>
+
         <!--link to javascript-->
         <script src="css/burger.js"></script>
 
         <div id="header-img">
-            <img class="meny-pic" src="img/vit-hund-nav.jpg" alt="dog">
+            <img class="meny-pic" src="img/vit-hund-nav.jpg" alt="hund">
         </div>
         <main id="main">
             <div id="routines-container">
                 <div id="textbox-routines">
+
                     <h2>Rutiner</h2>
                     <p>
                         Det går bra att lämna din hund mellan 05.00-08.45. Då vi går den första promenaden 09.00 behöver
@@ -55,7 +60,8 @@
                         en extra avgift.
                     </p>
                 </div>
-                <img id="pomeranian-img" src="img/pomeranian-run-sudd.jpg" alt="dog">
+
+                <img id="pomeranian-img" src="img/pomeranian-run-sudd.jpg" alt="hund">
 
             </div>
 
@@ -66,29 +72,39 @@
                     <ul id="open">
                         <li>05.00 - Dagis öppnar</li>
                     </ul>
+
                     <ul id="Walk1">
                         <li>09.00-11.00 - Första promis </li>
                     </ul>
+
                     <ul id="food">
                         <li>11.00-12.00 - Lunch (För de hundar som äter på dagis)</li>
                     </ul>
+
                     <ul id="rest">
                         <li>12.00-13.30 Mys och lek</li>
                     </ul>
+
                     <ul id="walk2">
                         <li>13.30-14.30 Sista promis</li>
                     </ul>
+
                     <ul id="home">
                         <li>15.00 Hundarna kan börja hämtas</li>
                     </ul>
+
                     <ul id="close">
                         <li>18.00 Dagis stänger</li>
                     </ul>
+
                 </div>
-                <img id="bulldog-pic" src="img/bulldog.jpg" alt="dog">
+                <img id="bulldog-pic" src="img/bulldog.jpg" alt="hund">
+
             </div>
+
             <div id="Rules-container">
                 <div id="Rules-textbox">
+
                     <h2>Regler</h2>
                     <h3>Vaccination och Försäkring</h3>
                     <p>
@@ -112,11 +128,15 @@
                         Dagis har inte alltid stängt på röda dagar. Hör av er till mig angående den röda dagen för vad
                         som gäller.
                     </p>
+
                 </div>
+
                 <img id="syringe" src="img/syringe.jpg" alt="syringe">
             </div>
+
             <div id="disease-container">
                 <div id="disease-textbox">
+
                     <h2>Vid Sjukdom</h2>
                     <p>För att minska risken för smittspridning behöver ni kontakta mig vid sjukt symptom som t.ex.
                         hosta,
@@ -126,14 +146,16 @@
                         detta,
                         vid dessa tillfällen är det viktigt att rådfråga en veterinär. </p>
                 </div>
-                <img id="sick-dog" src="img/Riley-sudd.jpg" alt="dog">
+
+                <img id="sick-dog" src="img/Riley-sudd.jpg" alt="hund">
             </div>
 
 
             <div id="price-list">
 
-                <img id="pugs" src="img/pugs-4.jpg" alt="dog">
+                <img id="pugs" src="img/pugs-4.jpg" alt="hund">
                 <div id="price-list-box">
+
                     <h2 id="rubrik-price">Prislista</h2>
                     <ul id="dollar">
                         <li>5 dagar i veckan 4500kr/månaden (mån-fre)</li>
@@ -141,9 +163,10 @@
                         </li>
                         <li>Övertid vardagar 100kr/h</li>
                     </ul>
+
                 </div>
 
-                <img id="price-pic" src="img/corgi.jpg" alt="dog">
+                <img id="price-pic" src="img/corgi.jpg" alt="hund">
 
             </div>
 
@@ -152,16 +175,21 @@
 
 
         <footer id="footer">
+
             <img id="footer-img" src="img/Doggy Daycare-5-100px.png" alt="logga">
+
             <p class="footer-text">
                 08-508 290 00
             </p>
+
             <p class="footer-text">
                 Nortullsgatan 21 Odenplan Stockholm
             </p>
+
             <p class="footer-text">
                 doggydaycare@live.com
             </p>
+
         </footer>
 
     </div>
