new bild och setup css 05

--- a/om_mig.html
+++ b/om_mig.html
@@ -16,7 +16,7 @@
                 <ul class="nav-text">
                     <li class="meny"><a href="index.html">Hem</a></li>
                     <li class="meny"><a href="dagis.html">Dagis</a></li>
-                    <li id="active" class="meny"><a  href="om_mig.html">Om Mig</a></li>
+                    <li class="meny"><a id="active" href="Om_mig.html">Om mig</a></li>
                     <li class="meny"><a href="kontakt.html">Kontakt</a></li>
                 </ul>
                 <img class="logga" src="img/Doggy Daycare-7.png" alt="logo">
@@ -25,7 +25,7 @@
     
 
                 <div id="header-img">
-                    <img class="meny-pic" src="img/winterdog.jpg" alt="dog">
+                    <img class="meny-pic" src="img/winterdog-nav.jpg" alt="dog">
                 </div>
             
             <div id="main">
