--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 
                 <div id="img-box3">
 
-                    <img class="hagaparken" src="img/hagaparken.jpeg" alt="haga parken">
+                    <img class="hagaparken" src="img/hagaparken.jpg" alt="haga parken">
                     <img class="vanadislunden" src="img/vanadis.jpg" alt="vanadis parken">
                     <img class="chill-dog" src="img/chill dog.jpg" alt="dog chill">
 
