active id fixed

--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
                 <li class="meny"><a href="index.html">Hem</a></li>
                 <li class="meny"><a href="dagis.html">Dagis</a></li>
                 <li class="meny"><a href="om_mig.html">OmMig</a></li>
-                <li class="meny" id="active"><a href="kontakt.html">Kontakt</a></li>
+                <li class="meny"><a  id="active" href="kontakt.html">Kontakt</a></li>
             </ul>
             <img class="logga" src="img/Doggy Daycare-7.png" alt="dog">
 
